...
        c("hong-kong", "Hong Kong", "Asia/Hong_Kong"),
        c("pekin", "Pékin", "Asia/Shanghai", en = "Beijing"),
        c("shanghai", "Shanghai", "Asia/Shanghai"),
        c("taipei", "Taipei", "Asia/Taipei"),
        c("manille", "Manille", "Asia/Manila", en = "Manila"),
        c("seoul", "Séoul", "Asia/Seoul", en = "Seoul"),
        c("tokyo", "Tokyo", "Asia/Tokyo"),
        c("perth", "Perth", "Australia/Perth"),
        c("brisbane", "Brisbane", "Australia/Brisbane"),
        c("sydney", "Sydney", "Australia/Sydney"),
        c("melbourne", "Melbourne", "Australia/Melbourne"),
        c("noumea", "Nouméa", "Pacific/Noumea", en = "Noumea"),
        c("auckland", "Auckland", "Pacific/Auckland"),
...
